solved z-index issue with the 'confirm delete' modal on in WisdomView componenet

--- a/src/components/WisdomPageModal/WisdomPageModal.css
+++ b/src/components/WisdomPageModal/WisdomPageModal.css
@@ -17,4 +17,5 @@
 
 .ss-backdrop {
   opacity: 0.3;
+  position: absolute;
 }
